# oc-wasm-bios

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md  decompressor.wat  get-target-dir  pack
src/: lib.rs  main.rs
